Updated versions of certain plugins and properties. Added AsciiDoc doxia modules to site.