@@ -38,11 +38,11 @@
         <nazgul-tools.version>6.0.3</nazgul-tools.version>
         <nazgul-core.version>3.0.0</nazgul-core.version>
 
-        <enforcer.version>3.3.0</enforcer.version>
+        <enforcer.version>3.4.1</enforcer.version>
         <enforcer.includedGroupIdPatterns>^se\.jguru\..*</enforcer.includedGroupIdPatterns>
         <enforcer.excludedGroupIdPatterns>^se\.jguru\..*\.generated\..*,^se\.jguru\.codestyle\..*</enforcer.excludedGroupIdPatterns>
         <breakOnFailure.enforcer>true</breakOnFailure.enforcer>
-        
+
         <!-- License plugin configuration parameters. -->
         <license.id>jguru_apl_v2</license.id>
         <license.licenseResolver>classpath://codestyle/license</license.licenseResolver>
@@ -322,7 +322,7 @@
             <properties>
 
                 <!-- AspectJ Properties -->
-                <aspectj.runtime.version>1.9.7</aspectj.runtime.version>
+                <aspectj.runtime.version>1.9.22</aspectj.runtime.version>
                 <aspectj-maven-plugin.version>1.15.0</aspectj-maven-plugin.version>
             </properties>
 
@@ -456,82 +456,6 @@
                     </plugin>
                 </plugins>
             </reporting>
-        </profile>
-
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>9</jdk>
-            </activation>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.jetbrains.kotlin</groupId>
-                    <artifactId>kotlin-stdlib-jdk8</artifactId>
-                    <version>${kotlin.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.jetbrains.kotlin</groupId>
-                    <artifactId>kotlin-test-junit</artifactId>
-                    <version>${kotlin.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>--add-modules=java.xml.bind</arg>
-                            </compilerArgs>
-                            <!-- without forking compilation happens in the
-                                same process, so no arguments are applied -->
-                            <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                --add-modules java.xml.bind
-                                --illegal-access=deny
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                --add-modules java.xml.bind
-                                --illegal-access=deny
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>jdk8</id>
-            <activation>
-                <jdk>8</jdk>
-            </activation>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.jetbrains.kotlin</groupId>
-                    <artifactId>kotlin-stdlib-jdk8</artifactId>
-                    <version>${kotlin.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.jetbrains.kotlin</groupId>
-                    <artifactId>kotlin-test-junit</artifactId>
-                    <version>${kotlin.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
         </profile>
     </profiles>
 </project>
